Analizando o codigo